# meeting-intelligence

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
docs/api/: endpoints.md
docs/architecture/: architecture.md  system-overview.d2  tier-comparison.d2
docs/decisions/: adr-001-two-tier-model.md
docs/deployment/: railway-setup.md
docs/diagrams/: system-overview.d2  tier-comparison.d2
docs/features/: batch-processing.md  privacy-tiers.md  semantic-search.md  sentiment-analysis.md  structured-extraction.md  test-suite.md
examples/: demo.py  sample-meeting.md  seed.py
examples/ordinary/: weekly_standup.txt
examples/sensitive/: executive_review.txt
src/backend/: api.py  extractor.py  models.py  parsers.py  sentiment.py  vectorstore.py
src/frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
src/frontend/__tests__/: smoke.test.ts
src/frontend/__tests__/lib/: api.test.ts
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/app/api/[...path]/: route.ts
src/frontend/app/dashboard/: page.tsx
src/frontend/app/intelligence/: page.tsx
src/frontend/app/meetings/: page.tsx
src/frontend/app/meetings/[meetingId]/: page.tsx
src/frontend/app/search/: page.tsx
src/frontend/components/: app-header.tsx  app-sidebar.tsx  font-size-toggle.tsx  theme-toggle.tsx
src/frontend/lib/: api.ts
src/meeting_intelligence/: __init__.py  pipeline.py  redaction.py  vectorstore.py
tests/e2e/: conftest.py  test_full_pipeline.py
tests/smoke/: conftest.py  test_backend_smoke.py
tests/unit/backend/: conftest.py  test_api.py  test_extractor.py  test_models.py  test_parsers.py  test_pipeline.py  test_redaction.py  test_sentiment.py  test_vectorstore.py
